--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,40 @@
 
 /* Your CSS Code here. */
+
+/* Holder class to create the flex container */
+.holder {
+  display: flex;
+  justify-content: space-between; /* Distribute items with space between */
+  flex-wrap: wrap; /* Allow items to wrap onto the next row if necessary */
+  margin: 0;
+  padding: 0;
+}
+
+/* Item class for individual boxes */
+.item {
+  flex: 0 0 auto; /* Prevent shrinking or growing */
+  width: 100px; /* Fixed width */
+  height: 100px; /* Fixed height */
+  margin: 5px; /* Add some spacing */
+  text-align: center; /* Center text horizontally */
+  line-height: 100px; /* Center text vertically */
+  font-size: 20px;
+  color: black;
+}
+
+/* Colors for demonstration purposes */
+.item:nth-child(1) {
+  background-color: red;
+}
+.item:nth-child(2) {
+  background-color: blue;
+}
+.item:nth-child(3) {
+  background-color: green;
+}
+.item:nth-child(4),
+.item:nth-child(5),
+.item:nth-child(6),
+.item:nth-child(7) {
+  background-color: green;
+}
